--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body {
 }
 
 .container {
+    width: auto;
+    height: auto;
     text-align: center;
 }
 
@@ -17,15 +19,16 @@ h1 {
 }
 
 #game-board {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(5, 100px);
-    gap: 15px;
+    gap: 2%;
     margin-bottom: 20px;
+    margin-left: 20px;
 }
 
 .cell {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 150px;
     border: 2px solid #ffffff;
     display: flex;
     justify-content: center;
@@ -67,6 +70,27 @@ h1 {
     border-color: #000000;
 }
 
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    color: #ffffff;
+    background-color: #007bff;
+    cursor: pointer;
+    margin: 5px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+button:disabled {
+    background-color: #aaa;
+    cursor: not-allowed;
+}
+
 #check-btn, #reset-btn {
     padding: 10px 20px;
     font-size: 16px;
@@ -87,27 +111,43 @@ h1 {
     color: #000000;
 }
 
+#hints {
+    margin: 10px 0;
+    font-size: 18px;
+    color: #ff9800;
+    font-weight: bold;
+}
+
 #selected-sequence {
     color: #007bff;
 }
 
-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    color: #ffffff;
-    background-color: #007bff;
-    cursor: pointer;
-    margin: 5px;
-    transition: background-color 0.3s;
+/* Media Queries */
+@media (max-width: 768px) {
+    #game-board {
+        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    }
+
+    #feedback, #attempts, #selected-sequence, #hints {
+        font-size: 0.875rem; /* Reduz o tamanho da fonte em telas menores */
+    }
+
+    button {
+        font-size: 0.875rem; /* Reduz o tamanho da fonte dos botões */
+    }
 }
 
-button:hover {
-    background-color: #0056b3;
-}
+@media (max-width: 480px) {
+    #game-board {
+        grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+    }
 
-button:disabled {
-    background-color: #aaa;
-    cursor: not-allowed;
+    #feedback, #attempts, #selected-sequence, #hints {
+        font-size: 0.75rem; /* Reduz o tamanho da fonte ainda mais em telas muito pequenas */
+    }
+
+    button {
+        font-size: 0.75rem; /* Reduz o tamanho da fonte dos botões */
+        padding: 8px 16px; /* Ajusta o padding dos botões */
+    }
 }
